--- a/web-project/index.html
+++ b/web-project/index.html
@@ -210,7 +210,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer">
                     <li>
                         <div class="category-card  scaleUp fade-in" style="--color: hsl(183, 83%, 75%);">
                         <div class="card-icon">
-                          <img src="/assets/banner/mac.svg" class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" width="40" height="80" 
+                          <img src="./assets/banner/mac.svg" class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" width="40" height="80" 
                             alt="Online Degree Program" class="img img-color"  loading="lazy">
                             
                         </div>
@@ -236,7 +236,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer">
                     <li>
                         <div class="category-card  scaleUp fade-in" style="--color: hsl(278, 100%, 50%);">
                         <div class="card-icon">
-                            <img src="/assets/category/book-3-fill.svg" width="40" height="80" 
+                            <img src="./assets/category/book-3-fill.svg" width="40" height="80" 
                             alt="Professional Development Program" class="img" loading="lazy">
                         </div>
 
@@ -259,7 +259,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer">
                     <li>
                         <div class="category-card scaleUp fade-in">
                         <div class="card-icon">
-                            <img src="/assets/banner/graduation-cap-fill.svg" width="40" height="80" 
+                            <img src="./assets/banner/graduation-cap-fill.svg" width="40" height="80" 
                             alt="Distributed Learning Initiative" class="img" loading="lazy">
                         </div>
 
@@ -283,7 +283,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer">
                     <li>
                         <div class="category-card  scaleUp fade-in" style="--color: hsl(0, 100%, 50%) ;">
                         <div class="card-icon">
-                            <img src="/assets/banner/community-line.svg" width="40" height="80" 
+                            <img src="./assets/banner/community-line.svg" width="40" height="80" 
                             alt="Mixed-Mode Learning" class="img" loading="lazy">
                         </div>
 
@@ -1573,7 +1573,7 @@ BACK TO TOP
     <!---
     custom JS link
     -->
-    <script src="/index.js" defer ></script>
+    <script src="./index.js" defer ></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
